--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
 
@@ -113,16 +114,9 @@ how to create water reflection animation in after effects -->
                 <g id="water"><rect class="cls-1" y="150.6" width="80" height="3"/></g></svg>
             </div>
 
-
-
-
                 <header class="hoofdkop omhoog">
                         <h1>wees <span class="fullwidth">magnific</span></h1>
                 </header>
-
-
-
-
 
 
 
