--- a/stadskyline.html
+++ b/stadskyline.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
 
@@ -72,7 +73,7 @@
                                         <img src="img/Stad01Def.jpg">
                                     </div>
                                     <div class="cell  project-content">
-                                            <h3><span>Stad skyline</span></h3>
+                                            <h3 class="project-content-header"><span>Stad skyline</span></h3>
                                             <p>Illustratie in eigen opdracht. </p>
 
                                         </div>
@@ -82,7 +83,7 @@
 
                                             </div>
                                         <div class="cell medium-8 large-5 medium-offset-2 project-content">
-                                                <h3><span>Mogelijkheden</span></h3>
+                                                <h3 class="project-content-header"><span>Mogelijkheden</span></h3>
                                                 <p>Bijzonder geschikt voor hero illustraties en banners. Bij het maken van de illustratie kan rekening worden gehouden met de plaatsing van tekst of buttons. <br> Hieronder ziet u een toepassing van deze illustratie.</p>
                                             </div>
 
