--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             <div class="title-bar show-for-small-only" >
                 <div class="title-bar-title logo">
-                    <a href="index.html" >image<span>magnific</span></a>
+                    <a href="http://localhost:81/marian-website/index.html" >image<span>magnific</span></a>
                 </div>
                 <!-- <div class="title-bar-right">Illustratie studio    </div> -->
             </div>
@@ -35,18 +35,17 @@
             <div class="grid-container">
                 <div class="top-bar hide-for-small-only">
                     <div class="top-bar-title logo">
-                            <a class="" href="index.html"> image<span>magnific</span></a>
+                            <a class="menu-link" href="http://localhost:81/marian-website/index.html"> image<span>magnific</span></a>
                     </div>
                     <div class="top-bar-right">
-                        <ul class=" small-horizontal menu" >
-
-                        <li>
-                            <a class="" href="werk.html"><span class="" >Werk
-                            </span> </a>
-                        </li>
-                        <li><a href="#"><span class="italic">Studio</span></a></li>
-                        <!-- <li><a href="#"></a></li> -->
-                        <li><a href="#"><span class="">Contact</span></a></li>
+                        <ul  id="top" class=" small-horizontal menu" >
+                            <li>
+                                <a class="menu-link" href="http://localhost:81/marian-website/werk.html"><span class="" >Werk
+                                </span> </a>
+                            </li>
+                            <li><a class="menu-link" href="http://localhost:81/marian-website/studio.html"><span class="italic">Studio</span></a></li>
+                            <!-- <li><a href="#"></a></li> -->
+                            <li><a class="menu-link" href="http://localhost:81/marian-website/contact.html"><span class="">Contact</span></a></li>
                         </ul>
                     </div>
                 </div>
@@ -60,11 +59,12 @@
 
 
 
-    <div class="grid-container">
+    <main id="swup" class="swup-transition-fade grid-container">
+
         <div class="intro grid-x grid-padding-x">
             <div  class="small-12 hero-container">
 
-                <noscript><img src="img/Stad2.jpg"></noscript>
+                <!-- <noscript><img src="img/Stad2.jpg"></noscript> -->
 <!-- http://www.lighthousebrewing.com/ -->
                 <svg class="contrail" height="8" width="100%"  xmlns="http://www.w3.org/2000/svg">
                     <line class="path" x1="0" y1="0" x2="100%" y2="1" style="stroke:rgba(255,255,255,0.35);stroke-width:1" />
@@ -133,7 +133,7 @@ how to create water reflection animation in after effects -->
             </div>
 
 
-        </div>       <!-- end grid-container  -->
+        </main>       <!-- end grid-container  -->
 
 
 
@@ -176,7 +176,7 @@ how to create water reflection animation in after effects -->
                     <div class="cell">
                         <ul class="menu footer-bottom-links">
 
-                            <li><a class="" href="werk.html">Werk</a></li>
+                            <li><a class="" href="http://localhost:81/marian-website/werk.html">Werk</a></li>
                             <li><a href="studio.html">Studio</a></li>
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
@@ -198,6 +198,8 @@ how to create water reflection animation in after effects -->
 <script src="js/vendor/jquery.js"></script>
 <script src="js/vendor/what-input.js"></script>
 <script src="js/vendor/foundation.js"></script>
+<script src="node_modules/swup/dist/swup.js" type="module"></script>
 <script src="js/app.js"></script>
+<script src="js/styles.js" type="module"></script>
 </body>
 </html>
