--- a/stadskyline.html
+++ b/stadskyline.html
@@ -26,7 +26,7 @@
 
             <div class="title-bar show-for-small-only" >
                 <div class="title-bar-title logo">
-                    <a href="index.html" >image<span>magnific</span></a>
+                    <a href="http://localhost:81/marian-website/index.html" >image<span>magnific</span></a>
                 </div>
                 <!-- <div class="title-bar-right">Illustratie studio    </div> -->
             </div>
@@ -34,18 +34,18 @@
             <div class="grid-container">
                 <div class="top-bar hide-for-small-only">
                     <div class="top-bar-title logo">
-                            <a class="" href="index.html"> image<span>magnific</span></a>
+                            <a class="menu-link" href="index.html"> image<span>magnific</span></a>
                     </div>
-                    <div class="top-bar-right">
-                        <ul class=" small-horizontal menu" >
+                    <div  class="top-bar-right">
+                        <ul id="top" class=" small-horizontal menu" >
 
-                        <li>
-                            <a class="active" href="werk.html"><span class="" >Werk
-                            </span> </a>
-                        </li>
-                        <li><a href="#"><span class="italic">Studio</span></a></li>
-                        <!-- <li><a href="#"></a></li> -->
-                        <li><a href="#"><span class="">Contact</span></a></li>
+                            <li>
+                                <a class="menu-link" href="http://localhost:81/marian-website/werk.html"><span class="" >Werk
+                                </span> </a>
+                            </li>
+                            <li><a class="menu-link" href="http://localhost:81/marian-website/studio.html"><span class="italic">Studio</span></a></li>
+                            <!-- <li><a href="#"></a></li> -->
+                            <li><a class="menu-link" href="http://localhost:81/marian-website/contact.html"><span class="">Contact</span></a></li>
                         </ul>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
 
 
 
-    <div class="grid-container">
+ <main id="swup" class="swup-transition-fade grid-container">
 
         <div class="grid-x grid-padding-x">
 
@@ -165,7 +165,7 @@
             </footer>
 
 
-</div>
+        </main>
 
 
 
@@ -177,6 +177,8 @@
 <script src="js/vendor/jquery.js"></script>
 <script src="js/vendor/what-input.js"></script>
 <script src="js/vendor/foundation.js"></script>
+<script src="node_modules/swup/dist/swup.js" type="module"></script>
 <script src="js/app.js"></script>
+<script src="js/styles.js" type="module"></script>
 </body>
 </html>
