--- a/werk.html
+++ b/werk.html
@@ -27,7 +27,7 @@
 
             <div class="title-bar show-for-small-only" >
                 <div class="title-bar-title logo">
-                    <a href="index.html" >image<span>magnific</span></a>
+                    <a href="http://localhost:81/marian-website/index.html" >image<span>magnific</span></a>
                 </div>
                 <!-- <div class="title-bar-right">Illustratie studio    </div> -->
             </div>
@@ -35,18 +35,17 @@
             <div class="grid-container">
                 <div class="top-bar hide-for-small-only">
                     <div class="top-bar-title logo">
-                            <a class="" href="index.html"> image<span>magnific</span></a>
+                            <a class="menu-link" href="http://localhost:81/marian-website/index.html"> image<span>magnific</span></a>
                     </div>
                     <div class="top-bar-right">
-                        <ul class=" small-horizontal menu" >
-
-                        <li>
-                            <a class="active" href="werk.html"><span class="" >Werk
-                            </span> </a>
-                        </li>
-                        <li><a href="#"><span class="italic">Studio</span></a></li>
-                        <!-- <li><a href="#"></a></li> -->
-                        <li><a href="#"><span class="">Contact</span></a></li>
+                        <ul id="top"  class=" small-horizontal menu" >
+                            <li>
+                                <a class="menu-link" href="http://localhost:81/marian-website/werk.html"><span class="" >Werk
+                                </span> </a>
+                            </li>
+                            <li><a class="menu-link" href="http://localhost:81/marian-website/studio.html"><span class="italic">Studio</span></a></li>
+                            <!-- <li><a href="#"></a></li> -->
+                            <li><a class="menu-link" href="http://localhost:81/marian-website/contact.html"><span class="">Contact</span></a></li>
                         </ul>
                     </div>
                 </div>
@@ -60,7 +59,7 @@
 
 
 
-    <div class="grid-container">
+ <main id="swup" class="swup-transition-fade grid-container">
 
 
 
@@ -72,7 +71,7 @@
                    <!--doorklik -->
                    <div class="no-masonry-css-item">
                         <figure class="tile tile--bottom">
-                            <a class="" href="stadskyline.html">
+                            <a class="" href="http://localhost:81/marian-website/stadskyline.html">
                                 <img src="img/stad01-skyline.jpg" class="" height="" width="" alt="">
                                 <figcaption class="tile__overlay">
                                     <div class="info-panel info-panel--purple">
@@ -171,7 +170,7 @@
 
                   </div>
 
-            </div>
+                </main>
 
 
 
@@ -221,7 +220,7 @@
                             <div class="cell">
                                 <ul class="menu footer-bottom-links">
 
-                                    <li><a class="active" href="werk.html">Werk</a></li>
+                                    <li><a class="" href="http://localhost:81/marian-website/werk.html">Werk</a></li>
                                     <li><a href="studio.html">Studio</a></li>
                                     <li><a href="contact.html">Contact</a></li>
                                 </ul>
@@ -243,6 +242,8 @@
 <script src="js/vendor/jquery.js"></script>
 <script src="js/vendor/what-input.js"></script>
 <script src="js/vendor/foundation.js"></script>
+<script src="node_modules/swup/dist/swup.js" type="module"></script>
 <script src="js/app.js"></script>
+<script src="js/styles.js" type="module"></script>
 </body>
 </html>
