coding display of active links

--- a/filmfabriek1.html
+++ b/filmfabriek1.html
@@ -40,7 +40,7 @@
                         <ul class=" small-horizontal menu" >
 
                         <li>
-                            <a class="active" href="werk.html"><span class="" >Werk
+                            <a  class="werk" href="werk.html"><span class="" >Werk
                             </span> </a>
                         </li>
                         <li><a href="#"><span class="italic">Studio</span></a></li>
