--- a/werk.html
+++ b/werk.html
@@ -38,13 +38,13 @@
                             <a class="" href="index.html"> image<span>magnific</span></a>
                     </div>
                     <div class="top-bar-right">
-                        <ul class=" small-horizontal menu" >
+                        <ul id="top" class="links small-horizontal menu" >
 
                         <li>
-                            <a class="active" href="werk.html"><span class="" >Werk
+                            <a class="werk" href="werk.html"><span class="" >Werk
                             </span> </a>
                         </li>
-                        <li><a href="#"><span class="italic">Studio</span></a></li>
+                        <li><a href="studio.html"><span class="italic">Studio</span></a></li>
                         <!-- <li><a href="#"></a></li> -->
                         <li><a href="#"><span class="">Contact</span></a></li>
                         </ul>
@@ -219,9 +219,9 @@
                     <div class="footer-bottom show-for-small-only">
                         <div class="grid-x align-middle">
                             <div class="cell">
-                                <ul class="menu footer-bottom-links">
+                                <ul id="bottom"  class="links menu footer-bottom-links">
 
-                                    <li><a class="active" href="werk.html">Werk</a></li>
+                                    <li><a class="" href="werk.html">Werk</a></li>
                                     <li><a href="studio.html">Studio</a></li>
                                     <li><a href="contact.html">Contact</a></li>
                                 </ul>
